# nyanpasu-service

./: .editorconfig  .gitignore  .gitmodules  CHANGELOGS.md  Cargo.toml  Cross.toml  README.md  cliff.toml  renovate.json  rustfmt.toml
.cargo/: config.toml
.github/scripts/: get-version.rs  get-version.ts
.github/workflows/: build.yml  ci.yml  integration.yml  publish.yml  release.yml
.serena/: project.yml
crates/clash-api/: Cargo.toml
crates/clash-api/src/: client.rs  error.rs  lib.rs  retry.rs  stream.rs
crates/clash-api/src/api/: configs.rs  connections.rs  dns.rs  logs.rs  maintenance.rs  memory.rs  mod.rs  proxies.rs  rules.rs  storage.rs  traffic.rs  version.rs
crates/clash-api/tests/: README.md  mihomo.rs  named_pipe.rs  rest.rs  streams.rs  traffic.rs
crates/nyanpasu-core-manager/: Cargo.toml  README.md
crates/nyanpasu-core-manager/src/: config.rs  config_diff.rs  error.rs  health.rs  instance.rs  kind.rs  lib.rs  manager.rs  probe.rs  probe_driver.rs  runtime_store.rs  spec.rs  state.rs
crates/nyanpasu-core-manager/src/config/: mod.rs  runtime_store.rs
crates/nyanpasu-core-manager/src/health/: mod.rs
crates/nyanpasu-core-manager/src/manager/: apply.rs  mod.rs  publish.rs  quarantine.rs  switching.rs
crates/nyanpasu-core-manager/tests/: check_config.rs  config_apply.rs  fake_core_smoke.rs  graceful_switch.rs  instance_lifecycle.rs  local_transport_smoke.rs  manager_orchestration.rs  orphan_recovery.rs  real_mihomo_smoke.rs
crates/nyanpasu-core-manager/tests/common/: mod.rs
crates/nyanpasu-core-manager/tests/helpers/: fake_core.rs  manager_host.rs
docs/superpowers/plans/: 2026-07-17-clash-api-client.md  2026-07-17-nyanpasu-utils-process-module.md  2026-07-18-nyanpasu-core-manager.md
docs/superpowers/specs/: 2026-07-16-nyanpasu-utils-process-module-design.md  2026-07-18-nyanpasu-core-manager-design.md
ipc_bridge/: Cargo.toml
ipc_bridge/src/: lib.rs
ipc_bridge/src/client/: mod.rs  wrapper.rs
ipc_bridge/src/server/: mod.rs
ipc_bridge/src/utils/: mod.rs
nyanpasu_ipc/: Cargo.toml
nyanpasu_ipc/examples/: get_pipe_sddl.rs
nyanpasu_ipc/scripts/: validate_acl.ps1
nyanpasu_ipc/src/: lib.rs
nyanpasu_ipc/src/api/: log.rs  mod.rs  status.rs
nyanpasu_ipc/src/api/core/: mod.rs  restart.rs  start.rs  stop.rs
nyanpasu_ipc/src/api/network/: mod.rs  set_dns.rs
nyanpasu_ipc/src/api/ws/: events.rs
nyanpasu_ipc/src/client/: mod.rs  shortcuts.rs  wrapper.rs
nyanpasu_ipc/src/server/: mod.rs  ws.rs
nyanpasu_ipc/src/types/: mod.rs  status.rs
nyanpasu_ipc/src/utils/: acl.rs  mod.rs  os.rs
nyanpasu_ipc/tests/: roundtrip.rs
nyanpasu_service/: Cargo.toml  build.rs
nyanpasu_service/src/: commands.rs  consts.rs  envs.rs  install.rs  logging.rs  main.rs  win_service.rs
nyanpasu_service/src/cmds/: install.rs  mod.rs  restart.rs  server.rs  start.rs  status.rs  stop.rs  uninstall.rs  update.rs
nyanpasu_service/src/cmds/install/: mod.rs
nyanpasu_service/src/cmds/rpc/: mod.rs
nyanpasu_service/src/server/: consts.rs  instance.rs  logger.rs  mod.rs
nyanpasu_service/src/server/routing/: logs.rs  mod.rs  network.rs  status.rs  ws.rs
nyanpasu_service/src/server/routing/core/: log.rs  mod.rs  restart.rs  start.rs  stop.rs
nyanpasu_service/src/service/: data.rs  web.rs
nyanpasu_service/src/utils/: acl.rs  dirs.rs  mod.rs  service.rs
nyanpasu_service/src/utils/os/: mod.rs  user.rs
nyanpasu_utils/: Cargo.toml  README.md
nyanpasu_utils/src/: lib.rs
nyanpasu_utils/src/core/: builder.rs  definition.rs  instance.rs  manager.rs  mod.rs  prelude.rs  utils.rs
nyanpasu_utils/src/io/: mod.rs
nyanpasu_utils/src/runtime/: mod.rs
scripts/: coverage-clash-api.ts  prepare-mihomo.ts
src/: install.rs  main.rs  service.rs  uninstall.rs
src/service/: data.rs  mod.rs  web.rs
tests/fixtures/mihomo/: config.yaml  proxy-provider.yaml  rule-provider.yaml
