cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = ["nyanpasu_service", "nyanpasu_ipc"]

[workspace.package]
edition = "2021"
license = "GPL-3.0"
authors = ["zzzgydi", "LibNyanpasu"]
repository = "https://github.com/LibNyanpasu/clash-nyanpasu-service.git"

[workspace.dependencies]
nyanpasu-utils = { git = "https://github.com/LibNyanpasu/nyanpasu-utils.git", default-features = false }
axum = "0.7.4"
anyhow = "1.0"
thiserror = "1"
parking_lot = "0.12.1"
simd-json = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.2", features = ["derive"] }
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "parking_lot",
] }
tracing-error = "0.2"
tracing-log = { version = "0.2" }
tracing-appender = { version = "0.2", features = ["parking_lot"] }
futures = "0.3.30"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"


[profile.dev]
rustflags = ["--cfg", "tokio_unstable"]
