[package]
name = "ipc_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-attributes = { workspace = true }
tracing-futures = { workspace = true }

tokio = { workspace = true }
