[package]
name = "ipc_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-attributes = { workspace = true }
tracing-futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io-util"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
interprocess = { version = "2.2.0", features = ["tokio"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
simd-json = { workspace = true }
futures-util = "0.3"
pin-project-lite = "0.2.14"