[package]
name = "nyanpasu-ipc"
version = "1.1.3"
edition = "2024"

[features]
server = ["dep:axum", "dep:axum-extra", "dep:tower", "dep:widestring"]
client = ["dep:axum"]
specta = ["dep:specta", "nyanpasu-utils/specta"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nyanpasu-utils = { workspace = true, default-features = false, features = [
    "core_manager",
    "serde",
] }
tracing = { workspace = true }
tracing-attributes = { workspace = true }
# tracing-futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io-util"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
interprocess = { version = "2", features = ["tokio"] }
axum = { version = "0.8", features = ["ws"], optional = true }
axum-extra = { version = "0.10", features = ["typed-header"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
# tower-http = { version = "0.5", features = ["fs", "trace"], optional = true }
widestring = { version = "1", optional = true }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
simd-json = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
pin-project-lite = "0.2"
# tokio-tungstenite = "0.23" # Websocket impl
derive_builder = "0.20"
specta = { version = "^2.0.0-rc.22", features = ["derive"], optional = true }

indexmap = { version = "2", features = ["serde"] }
serde_json = "1"                                   # for serde_json::Value
