[package]
name = "nyanpasu-service"
version = "1.0.4"
edition = "2021"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
default-run = "nyanpasu-service"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["deadlock_detection", "tracing"]
tracing = ["tokio/tracing", "dep:console-subscriber"]
deadlock_detection = [
    "parking_lot/deadlock_detection",
    "nyanpasu-utils/deadlock_detection",
]
hardware-lock-elision = ["parking_lot/hardware-lock-elision"]

[dependencies]
nyanpasu-utils = { workspace = true, default-features = false, features = [
    "dirs",
    "os",
] }
nyanpasu-ipc = { path = "../nyanpasu_ipc", default-features = false, features = [
    "server",
    "client",
] }
axum = { workspace = true, features = ["macros"] }
tower-http = { version = "0.5", features = ["trace"] }
tokio = { workspace = true, features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
simd-json = { workspace = true }
thiserror.workspace = true
anyhow = { workspace = true }
tracing.workspace = true
tracing-appender.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "json",
    "parking_lot",
] }
tracing-attributes.workspace = true
tracing-panic = "0.1"
service-manager = { git = "https://github.com/greenhat616/service-manager-rs.git" }
parking_lot = "0.12"
constcat = "0.5.0"
ctrlc = { version = "3", features = ["termination"] }
semver = "1"
bounded-vec-deque = "0.1.1"
chrono = { workspace = true }
colored = "2.1.0"
timeago = "0.4"
ansi-str = "0.8"
console-subscriber = { version = "0.3", optional = true, features = [
    "parking_lot",
] }
oneshot = "0.1"

[build-dependencies]
chrono = { workspace = true }
rustc_version = "0.4"


[target.'cfg(windows)'.dependencies]
check_elevation = "0.2.4"
windows-service = "0.7"

[target.'cfg(unix)'.dependencies]
whoami = "1"
