[package]
name = "nyanpasu-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-attributes = { workspace = true }
tracing-futures = { workspace = true }
tokio = { workspace = true }
runas.workspace = true
parking_lot.workspace = true
thiserror = { workspace = true }
derive_builder = "0.20"