[package]
name = "nyanpasu-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["core_manager"]
core_manager = ["dep:os_pipe", "dep:encoding_rs", "dep:shared_child"]

[dependencies]
tracing = { workspace = true }
tracing-attributes = { workspace = true }
tracing-futures = { workspace = true }
tokio = { workspace = true }
parking_lot.workspace = true
thiserror = { workspace = true }
derive_builder = "0.20"
os_pipe = { version = "1.2.0", optional = true }
encoding_rs = { version = "0.8", optional = true }
memchr = "2.7"
shared_child = { version = "1", optional = true }
