[package]
name = "nyanpasu-core-manager"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
camino = { version = "1.1", features = ["serde1"] }
clash-api = { path = "../clash-api" }
nyanpasu-utils = { path = "../nyanpasu-utils", default-features = false, features = ["process"] }
parking_lot.workspace = true
serde_yaml_ng = "0.10"
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "nyanpasu-fake-core"
path = "tests/helpers/fake_core.rs"
doc = false
