[package]
name = "nyanpasu-core-manager"
version = "0.1.2"
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
test-hooks = []

[[bin]]
doc = false
name = "nyanpasu-fake-core"
path = "tests/helpers/fake_core.rs"

[[bin]]
doc = false
name = "nyanpasu-manager-host"
path = "tests/helpers/manager_host.rs"

[dependencies]
camino = { version = "1.1", features = ["serde1"] }
clash-api = { path = "../clash-api" }
nyanpasu-utils = {
  path = "../nyanpasu-utils",
  default-features = false,
  features = ["process"]
}
parking_lot.workspace = true
serde_yaml_ng = "0.10"
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
nyanpasu-core-manager = { path = ".", features = ["test-hooks"] }
tempfile = "3"
